@@ -3,6 +3,6 @@ import org.springframework.stereotype.Service;
 @Service
 public class HelloService {
     public String getHello(String name) {
-        return String.format("Hello %s!", name);
+        return "Hello %s!".formatted(name);
     }
 }
